# locus-macos

./: LICENSE.md  MACOS_PORT_COMPLETE.md  PORTING.md  README.md  bun.lockb  com.sushant.locus.plist  index.html  install-macos.sh  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: macos.yml
Formula/: locus.rb
src/: .prettierrc  App.css  App.tsx  constants.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  model.rs  window_info.rs
src-tauri/src/stream/: stream_utils.rs
src-tauri/src/window_info/: macos_window_info.rs  native_macos.rs
src/components/: Alert.tsx  DottedBackground.tsx  Timer.tsx
src/components/Chart/: ChartPlaceholder.tsx  MinimumActivityDuration.tsx  Navigation.tsx  PerformaceGraphs.tsx  index.tsx
src/components/Chart/icon-set/: index.tsx
src/components/Indicator/: index.tsx
src/components/Indicator/icon-set/: index.ts
src/components/Settings/: ChartDialog.tsx  ImagePreview.tsx  TimerDialog.tsx  index.tsx
src/hooks/: useWindowTitleStream.tsx
src/model/: AlertTypes.ts  PomodoroTypes.ts  SessionHistory.ts
src/shadcn/components/ui/: chart.tsx  mode-toggle.tsx  slider.tsx
src/stores/: alertStore.tsx  settingStore.tsx  store.ts  streamStore.tsx
src/utils/: utils.ts
