[package]
name = "locus"
version = "0.1.0"
description = "An intelligent activity tracker that helps you understand and improve your focus habits."
authors = ["Sushant-Git"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "locus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.10.6"
socket2 = "0.5.7"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"

# macOS-only application - native system access
core-graphics = "0.23"
cocoa = "0.25"
core-foundation = "0.9"
objc = "0.2"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics", 
]

